# craft-text-detector

./: pyproject.toml
craft_text_detector/: craft_utils.py  predict.py  torch_utils.py
craft_text_detector/models/basenet/: vgg16_bn.py
