[project]
name = "craft-text-detector"
version = "0.4.3"
description = "Fast and accurate text detection library built on CRAFT implementation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Fatih Cagatay Akyon" }
]
keywords = ["machine-learning", "deep-learning", "ml", "pytorch", "text", "text-detection", "craft"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=1.6.0",
    "torchvision>=0.7.0",
    "opencv-python>=3.4.8.29",
    "scipy>=1.3.2",
    "gdown>=3.10.1",
]

[project.urls]
Homepage = "https://github.com/fcakyon/craft_text_detector"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]
